Fix z-index

--- a/src/doc/sass/_defs.scss
+++ b/src/doc/sass/_defs.scss
@@ -36,6 +36,7 @@ $button-hover-bg-color: hsl($base-hue - 20, 25%, 65%);
 
 // Z-index
 $z-index-themes-mask: 1001;
+$z-index-global-header: 1002;
 
 // Misc
 $code-block-bg-color: hsl($base-hue, 7%, 90%);
